
Project support
   * Added support for adding and removing files from a generic Makefile-based
     project (contributed by Kevin Michel)
   * Added better control over the environment used for running.
   * Add all cmake files to the project tree. (Only works with a cvs cmake.)
   * Support cmake with Microsoft Visual Studio Compiler (Only works with cvs
     cmake)
   * Fix a few cmake wizard bugs, where canceling left creator in a strange 
     state
   * The qmake and make steps can now be removed.
   * The qmake step is a lot smarter and tries harder to not run
   * By default projects using the Microsoft Visual Studio toolchain use jom
     instead of nmake, for better utilization of all processors.

Compilation
   * Support distributed compilation on Windows/MSVC via jom 
     (see http://qt.gitorious.org/qt-labs/jom/)

Debugging
   * Detect debugger from project tool chain
   * CDB: Added more types to the dumpers (QSharedPointer, QVector, common
     QMap/QSet types), dereference reference and pointer parameters
   * CDB: Simplified display of STL types in the locals window
   * CDB: Fixed thread handling
   * CDB: Added internal dumpers for string types for debuggee crashes
   * Improved QObject dumping, print out QRect/QSize, enumerations and flags
   * Made it possible to use the BinEditor plugin for displaying raw memory
   * Replace disassembler window by a real text editor enabling "mixed" output

Designer
   * Added support for rearranging and floating form editor tools

Version control plugins
   * Added CVS support
   * Added "sync" menu item to the perforce plugin

Wizards
   * Fixed GUI project and form class wizards to use the same settings.
   * Added version control checkout wizards
   * Added a license header template setting
   * Added a wizard for Qt Designer custom widgets
   * Added a gitorious clone wizard

Additional credits go to:
   * Christian Hoenig (Locator filter for symbols in current document)